# hsa-rs

./: Cargo.toml  main.c  rs_output.txt
examples/: event_test.rs  extended_diagnostics.rs  print_context_info.rs  print_diagnostics.rs  queue_create.rs
src/: error.rs  lib.rs  utils.rs
src/kfd/: device.rs  ioctl.rs  mod.rs  sysfs.rs  topology.rs
src/thunk/: context.rs  events.rs  mod.rs  signal.rs  topology.rs
src/thunk/memory/: aperture.rs  manager.rs  mod.rs
src/thunk/queues/: builder.rs  cwsr.rs  mod.rs
