[package]
name = "hsa-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.178"

[[example]]
name = "print_diagnostics"
path = "examples/print_diagnostics.rs"

[[example]]
name = "queue_create"
path = "examples/queue_create.rs"

[[example]]
name = "event_test"
path = "examples/event_test.rs"

[[example]]
name = "extended_diagnostics"
path = "examples/extended_diagnostics.rs"

[[example]]
name = "print_context_info"
path = "examples/print_context_info.rs"
